//任务相关
package money;
option py_generic_services=true;

import "universal/public.proto";
import "common.proto";

//上行(客户端主动发起)
service terminal2main{

}

//下行(服务端主动发起)
service main2terminal{
	rpc rpcCashLackBox(common.int64_)returns(common.int32_); //银币不足框 返回0关闭 1是元宝替换 2龙纹玉替换
	rpc rpcTradeCashLackBox(common.int64_)returns(common.int32_); //元宝不足框 返回0关闭 1是龙纹玉替换
	rpc rpcOpenRecharge(public.fake)returns(public.fake);//打开充值界面
}